--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Website Devan</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="google-site-verification" content="tegGzvfEzp1jrRWlqCl-073zBm7dXku8KWcu-UEQlMc" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue">
@@ -58,6 +59,8 @@
         Di halaman Hasil Karya sudah menambahkan <b>Canva</b>, <b>Google Form</b>, <b>Kumpulan Website</b>, dan <b>Hasil Karya Kelas 7</b>, sehingga versinya berubah menjadi v1.7.3.
         <br><br>
         Font untuk heading sudah berubah dari <b>Raleway</b> ke <b>Inter</b>, dan menunya sudah diperbaiki dan diperlengkap, sehingga versinya berubah menjadi v1.7.4.
+		<br><br>
+		Di versi 1.9, saya menggunakan Google Search Console supaya bisa mencari website saya dengan lebih mudah.
         </p><br>
 
         <p class="heading" style="font-size:25px; color:#000080;">
@@ -225,9 +228,12 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 30 Mei 2024<br>
+        Terakhir diupdate: 8 Desember 2025<br>
+        Version: 1.9<br>
+        Copyright © 2025 by Devan
+		<!-- Terakhir diupdate: 30 Mei 2024<br>
         Version: 1.8.1<br>
-        Copyright © 2024 by Devan
+        Copyright © 2024 by Devan -->
         </p>
     </footer>
 </body>
