--- a/blog.html
+++ b/blog.html
@@ -8,12 +8,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <style>
-    html {
-        /* --darkmode: 0; */
-        --darkmode: 0;
-        container-name: root;
-        container-type: normal;
-    }
     .color001 {
         color: #146480;
     }
@@ -279,21 +273,15 @@
             <p>
             Pada bulan Juni 2017, keluarga saya pergi liburan ke Bali.
             </p>
-            <div class="image">
-                <div class="gallery" style="width:300px;">
-                    <!-- <img src="images/blog/IMG_4550.JPG" style="filter:blur(3px);" oncontextmenu="return false;"> -->
-                    <img src="images/IMG_4550.JPG" style="filter:blur(3px);" oncontextmenu="return false;">
-                    <div class="desc">Gambar 1 <span style="color:red">(*)</span></div>
-                </div>
-                <div class="gallery" style="width:300px;">
-                    <img src="images/IMG_4617.JPG" style="filter:blur(3px);" oncontextmenu="return false;">
-                    <div class="desc">Gambar 2 <span style="color:red">(*)</span></div>
-                </div>
-                <div class="clearfix"></div>
-                <!-- <details>
-                    <summary>Klik disini</summary>
-                </details> -->
+            <div class="gallery" style="width:300px;">
+                <img class="image" id="img005" src="images/IMG_4550.JPG">
+                <div class="desc" id="img005d">Gambar 5: Sertifikat KMT PPO Jateng</div>
             </div>
+            <div class="gallery" style="width:300px;">
+                <img class="image" id="img006" src="images/IMG_4617.JPG">
+                <div class="desc" id="img006d">Gambar 6: Foto saat lomba KMT PPO Jateng</div>
+            </div>
+			<div class="clearfix"></div>
             <!-- <p> -->
             <br>
             <span class="color003" style="font-size:23px;"><b>Hari pertama</b></span>
@@ -389,7 +377,7 @@
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 7 Mei 2024<br> -->
-		Terakhir diupdate: 19 Feb 2025<br>
+		Terakhir diupdate: 9 Desember 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
