--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <br><br>
         Font untuk heading sudah berubah dari <b>Raleway</b> ke <b>Inter</b>, dan menunya sudah diperbaiki dan diperlengkap, sehingga versinya berubah menjadi v1.7.4.
 		<br><br>
-		Di versi 1.9, saya menggunakan Google Search Console supaya bisa mencari website saya dengan lebih mudah.
+		Di versi 1.9, saya menggunakan Google Search Console supaya bisa mencari website saya dengan lebih mudah. Selain itu, di versi 1.9.1, ada fitur tema gelap dan pencarian (search) Google yang baru.
         </p><br>
 
         <p class="heading" style="font-size:25px; color:#000080;">
@@ -228,8 +228,8 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 8 Desember 2025<br>
-        Version: 1.9<br>
+        Terakhir diupdate: 9 Desember 2025<br>
+        Version: 1.9.1<br>
         Copyright © 2025 by Devan
 		<!-- Terakhir diupdate: 30 Mei 2024<br>
         Version: 1.8.1<br>
