--- a/profil.html
+++ b/profil.html
@@ -9,18 +9,25 @@
 </head>
 <body>
     <div class="top-container heading">
-        <div class="dropdown" style="margin-right:20px; float:left;">
-            <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
-            <div class="dropdown-content" id="boxlink"></div>
-            <script src="script.js"></script>
+        <div class="top-container2" id="top-container2" style="height:46px;"></div>
+        <div class="page-container">
+            <a href="index.html">Home</a>
+            <a href="blog.html">Blog</a>
+            <a href="fakta.html">Fakta</a>
+            <a class="page-selected" href="profil.html">Profil</a>
+            <a href="portofolio.html">Portofolio</a>
+            <a href="hasil-karya.html">Hasil Karya</a>
+            <a href="timeline.html">Timeline</a>
+            <a href="updates.html">Updates</a>
+            <a href="projects.html">Projects</a>
+            <div style="float:right;" id="search"></div>
+            <script src="search.js"></script>
+            <div class="clearfix"></div>
         </div>
-        <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
-        <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
-        <div class="clearfix"></div>
     </div>
     <div class="container">
         <br>
-        <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>PROFIL</b></div>
+        <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>Profil</b></div>
         <p style="font-size:25px; color:#000080;"><b>Gambar</b></p>
         <div class="image">
             <!-- <img src="images/IMG_20200105_121417.jpg" width="150" style="border: 2px solid black; border-radius: 50%;"> -->
@@ -45,12 +52,12 @@
         <p>
             <!-- https://www.instagram.com/devandaniel09 -->
             Instagram: <img src="images/instagram-icon.png" width="20" style="vertical-align:bottom; padding:2px;">
-            <a href="https://www.instagram.com/devandaniel09">Devan - Instagram</a> (Baru)<br>
+            <a href="https://www.instagram.com/devandaniel09">Devan - Instagram</a><br>
             YouTube: <img src="images/Youtube-Symbol-Vector.jpg" width="20" style="vertical-align:bottom; padding:2px;">
             <a href="https://www.youtube.com/channel/UCbSs7ZjkJD3MWKt_vWyMU4Q">Devan - Youtube</a>
-            <br><br>
+            <!-- <br><br>
             Link beberapa teman/orang:<br>
-            <a href="orang.html">Daftar Teman & Orang</a>
+            <a href="orang.html">Daftar Teman & Orang</a> -->
         </p>
         <p class="heading" style="font-size:25px; color:#000080;"><b>Lihat juga / See also</b></p>
         <ul>
@@ -77,10 +84,14 @@
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
+	<script src="script.js"></script>
+    <script src="blog-description.js"></script>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 1 Okt 2023<br>
-        Copyright © 2023 by Devan
+        <!-- Terakhir diupdate: 1 Okt 2023<br>
+        Copyright © 2023 by Devan -->
+		Terakhir diupdate: 9 Desember 2025<br>
+        Copyright © 2025 by Devan
         </p>
     </footer>
 </body>
